--- a/lobby.html
+++ b/lobby.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="zombie.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>503 - Сервер на техработах</title>
+    <title>Студия 503 - Сервер на техработах</title>
     <style>
         /* Базовые стили */
         * {
@@ -350,7 +350,7 @@
         const progressElement = document.getElementById('progressValue');
         let progress = 0;
         let increasing = true;
-        const speed = 50; // Скорость анимации (меньше = быстрее)
+        const speed = 200; // Скорость анимации (меньше = быстрее)
 
         function updateProgress() {
             if (increasing) {
