--- a/lobby.html
+++ b/lobby.html
@@ -371,7 +371,7 @@
                 
                 Если видео нет, оставьте следующую строку:
             -->
-            <div class="video-placeholder">Скоро...</div>
+            <iframe width="1381" height="777" src="https://www.youtube.com/embed/k9doBpO1S4A" title="Открытие DDM! | Конец" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 
