--- a/lobby.html
+++ b/lobby.html
@@ -443,7 +443,7 @@
     <!-- Секция для видео/стрима -->
     <div class="video-container">
         <div class="video-wrapper">
-            <div class="video-placeholder">Скоро...</div>
+            <div class="video-placeholder">25.05.25 - 17:00</div>
         </div>
     </div>
 
