--- a/lobby.html
+++ b/lobby.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="zombie.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Студия 503 - Сервер на техработах</title>
+    <title>Студия 503 - Ваш мир не отвечает</title>
     <style>
         /* Базовые стили */
         * {
@@ -427,7 +427,7 @@
     <!-- Основное содержимое -->
     <div class="main-content">
         <h1>503</h1>
-        <h2>Сервер На Технических Работах</h2>
+        <h2>Ваш мир не отвечает</h2>
         <p>Наши блоки перегружены, как сундук после рейда. Герои уже работают над восстановлением сервера!</p>
         
         <div class="minecraft-text" id="loadingText">[Система] Перезагрузка сервера... <span id="progressValue">0</span>%</div>
