--- a/lobby.html
+++ b/lobby.html
@@ -443,13 +443,13 @@
     <!-- Секция для видео/стрима -->
     <div class="video-container">
         <div class="video-wrapper">
-            <div class="video-placeholder">25.05.25 - 17:00</div>
+            <div class="video-placeholder">Скоро второй подкаст?</div>
         </div>
     </div>
 
     <!-- Пасхалка (изначально скрыта) -->
     <div class="easter-egg" id="hiddenEgg">
-        <div>Подкастик с sev4ikgame?</div>
+        <div>Пока подкастов не ожидается...</div>
         <div style="margin-top: 1rem; font-size: 1rem;">(нажмите в любом месте, чтобы закрыть)</div>
     </div>
 
@@ -499,7 +499,7 @@
         (function() {
             const egg = document.getElementById('hiddenEgg');
             let keySequence = [];
-            const secretCode = ['KeyS', 'KeyE', 'KeyV'];
+            const secretCode = ['KeyD', 'KeyD', 'KeyM'];
             
             document.addEventListener('keydown', (e) => {
                 keySequence.push(e.code);
